--- a/share/misc/docbook.css
+++ b/share/misc/docbook.css
@@ -23,8 +23,8 @@
  * OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
  * SUCH DAMAGE.
  *
- * $FreeBSD: doc/share/misc/docbook.css,v 1.3 2001/07/03 12:30:32 nik Exp $
- * $Id: docbook.css,v 1.2 2001/07/03 18:06:05 pete Exp $
+ * $FreeBSD: doc/share/misc/docbook.css,v 1.4 2001/07/11 12:46:50 nik Exp $
+ * $Id: docbook.css,v 1.3 2001/08/01 19:44:25 pete Exp $
  */
 
 BODY ADDRESS {
@@ -40,7 +40,7 @@ BODY BLOCKQUOTE {
 
 HTML BODY {
 	margin: 1em 8% 1em 10%;
-	line-height: 1.5;
+	line-height: 1.2;
 }
 
 .LEGALNOTICE {
@@ -52,7 +52,7 @@ BODY DIV {
 	margin: 0;
 }
 
-BODY DL {
+DL {
 	margin: .8em 0;
 	line-height: 1.2;
 }
@@ -107,14 +107,14 @@ BODY IMG.NAVHEADER {
 	margin: 0 0 0 -4%;
 }
 
-BODY OL {
+OL {
 	margin: 0 0 0 5%;
-	line-height: 1.5;
+	line-height: 1.2;
 }
 
 BODY P {
 	margin: .6em 0;
-	line-height: 1.5;
+	line-height: 1.2;
 }
 
 BODY PRE {
@@ -124,16 +124,16 @@ BODY PRE {
 }
 
 BODY TD {
-	line-height: 1.3
+	line-height: 1.2
 }
 
 BODY TH {
-	line-height: 1.3;
+	line-height: 1.2;
 }
 
-BODY UL, BODY DIR, BODY MENU {
+UL, BODY DIR, BODY MENU {
 	margin: 0 0 0 5%;
-	line-height: 1.5;
+	line-height: 1.2;
 }
 
 HTML {
