--- a/share/misc/docbook.css
+++ b/share/misc/docbook.css
@@ -24,7 +24,7 @@
  * SUCH DAMAGE.
  *
  * $FreeBSD: doc/share/misc/docbook.css,v 1.4 2001/07/11 12:46:50 nik Exp $
- * $Id: docbook.css,v 1.3 2001/08/01 19:44:25 pete Exp $
+ * $IdPath$
  */
 
 BODY ADDRESS {
